메인페이지 수정중

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<!-- <script defer src="js/slider.js"></script> -->
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/popup.js"></script>
-</head>
 
+</head>
 <body>
 
 	<header id="header">
@@ -23,12 +23,96 @@
 
 			<nav class="menuWeb">
 				<ul id="gnb">
-					<li><a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a></li>
-					<li><a href="department.html">DEPARTMENT</a></li>
-					<li><a href="youtube.html">YOUTUBE</a></li>
-					<li><a href="community.html">COMMUNITY</a></li>
-					<li><a href="gallery.html">GALLERY</a></li>
-					<li><a href="location.html">LOCATION</a></li>
+					<li>
+						<a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="department.html">DEPARTMENT</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="youtube.html">YOUTUBE</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="community.html">COMMUNITY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="gallery.html">GALLERY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="location.html">LOCATION</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
 				</ul>
 
 				<ul class="util">
@@ -210,11 +294,29 @@
 		</div>
 	</section>
 
-	<section id="comment">
+	<section id="podcasts">
 		<div class="inner">
-			<h1>Comment</h1>
+			<h1>PODCASTS</h1>
 			<div class="wrap">
-
+				<article>
+					<div class="txt">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nam praesentium
+							temporibus quia accusantium explicabo.</p>
+						<i class="fas fa-podcast"></i>
+					</div>
+				</article>
+				<article>
+					<div class="txt">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
+						<i class="fas fa-podcast"></i>
+					</div>
+				</article>
+				<article>
+					<div class="txt">
+						<p>Lorem ipsum dolor sit amet consectetur </p>
+						<i class="fas fa-podcast"></i>
+					</div>
+				</article>
 
 
 			</div>
