메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -300,21 +300,53 @@
 			<div class="wrap">
 				<article>
 					<div class="txt">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nam praesentium
-							temporibus quia accusantium explicabo.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 						<i class="fas fa-podcast"></i>
 					</div>
 				</article>
 				<article>
 					<div class="txt">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
-						<i class="fas fa-podcast"></i>
+						<i class="fas fas fas fa-poll"></i>
 					</div>
 				</article>
 				<article>
 					<div class="txt">
 						<p>Lorem ipsum dolor sit amet consectetur </p>
-						<i class="fas fa-podcast"></i>
+						<i class="fas fas fa-laptop-code"></i>
+					</div>
+				</article>
+
+
+			</div>
+		</div>
+	</section>
+
+	<section id="comment">
+		<div class="inner">
+			<h1>Comment</h1>
+			
+			<div class="wrap">
+				<ul class="list">
+					<li>
+						<div class="pic"></div>
+						<div class="txt">
+							<h2>Exploring the Gestalt<br>Principles of Design</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, illo? Reiciendis nam accusantium qui quis!</p>
+							<a href="#"><i class="fas fa-chevron-right"></i>READ MORE</a>
+						</div>
+					</li>
+				</ul>
+				<article>
+					<div class="pic">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
+						<i class="fas fas fas fa-poll"></i>
+					</div>
+				</article>
+				<article>
+					<div class="pic">
+						<p>Lorem ipsum dolor sit amet consectetur </p>
+						<i class="fas fas fa-laptop-code"></i>
 					</div>
 				</article>
 
