--- a/location.html
+++ b/location.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>location</title>
+	<script defer src="js/custom.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f97a955efb03fb99cb37673ba7149432"></script>
@@ -21,19 +22,103 @@
 
 			<nav class="menuWeb">
 				<ul id="gnb">
-					<li><a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a></li>
-					<li><a href="department.html">DEPARTMENT</a></li>
-					<li><a href="youtube.html">YOUTUBE</a></li>
-					<li><a href="community.html">COMMUNITY</a></li>
-					<li><a href="gallery.html">GALLERY</a></li>
-					<li><a href="location.html">LOCATION</a></li>
+					<li>
+						<a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="department.html">DEPARTMENT</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="youtube.html">YOUTUBE</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="community.html">COMMUNITY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="gallery.html">GALLERY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="location.html">LOCATION</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
 				</ul>
 
 				<ul class="util">
 					<li><a href="join.html"><i class="fas fa-user"></i></a></li>
-					<li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-					<li><a href="#"><i class="fas fa-search"></i></a></li>
-					<li><a href="#">KOR <i class="fas fa-chevron-down"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-shopping-bag"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-search"></i></a></li>
+					<li><a href="#" onclick="return false">KOR <i class="fas fa-chevron-down"></i></a></li>
 				</ul>
 
 			</nav>
