--- a/join.html
+++ b/join.html
@@ -11,6 +11,7 @@
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="js/jquery.mCustomScrollbar.js"></script>
 	<script defer src="js/join.js"></script>
+	<script defer src="js/custom.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,19 +22,103 @@
 
 			<nav class="menuWeb">
 				<ul id="gnb">
-					<li><a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a></li>
-					<li><a href="department.html">DEPARTMENT</a></li>
-					<li><a href="youtube.html">YOUTUBE</a></li>
-					<li><a href="community.html">COMMUNITY</a></li>
-					<li><a href="gallery.html">GALLERY</a></li>
-					<li><a href="location.html">LOCATION</a></li>
+					<li>
+						<a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="department.html">DEPARTMENT</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="youtube.html">YOUTUBE</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="community.html">COMMUNITY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="gallery.html">GALLERY</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<a href="location.html">LOCATION</a>
+						<div class="sub">
+							<div class="left">
+								<h2>sub</h2>
+							</div>
+							<div class="right">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
 				</ul>
 
 				<ul class="util">
 					<li><a href="join.html"><i class="fas fa-user"></i></a></li>
-					<li><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-					<li><a href="#"><i class="fas fa-search"></i></a></li>
-					<li><a href="#">KOR <i class="fas fa-chevron-down"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-shopping-bag"></i></a></li>
+					<li><a href="#" onclick="return false"><i class="fas fa-search"></i></a></li>
+					<li><a href="#" onclick="return false">KOR <i class="fas fa-chevron-down"></i></a></li>
 				</ul>
 
 			</nav>
