--- a/department.html
+++ b/department.html
@@ -6,9 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>department</title>
+	<script defer src="js/custom.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/department.js"></script>
-	<script defer src="js/custom.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 
 <body>
