--- a/sub_page.html
+++ b/sub_page.html
@@ -7,6 +7,7 @@
     <title>subpage layout</title>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+	<!-- <script defer src="js/custom.js"></script> -->
 </head>
 <body>
     <header id="header_sub">
