메인페이지 수정중

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 				<article>
 					<div class="txt">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
-						<i class="fas fas fas fa-poll"></i>
+						<i class="far fa-chart-bar"></i>
 					</div>
 				</article>
 				<article>
@@ -323,35 +323,37 @@
 		</div>
 	</section>
 
-	<section id="comment" class="myScroll">
+	<section id="content" class="myScroll">
 		<div class="inner">
-			<h1>Comment</h1>
+			<h1>Content</h1>
 			
 			<div class="wrap">
-				<ul class="list">
-					<li>
-						<div class="pic"></div>
-						<div class="txt">
-							<h2>Exploring the Gestalt<br>Principles of Design</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, illo? Reiciendis nam accusantium qui quis!</p>
-							<a href="#"><i class="fas fa-chevron-right"></i>READ MORE</a>
-						</div>
-					</li>
-				</ul>
 				<article>
-					<div class="pic">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
-						<i class="fas fas fas fa-poll"></i>
-					</div>
+					<h2>Nullam vitae justo at mauris<br> sodales feugiat. Praesent<br> pellentesque ipsum eget tellus<br> imperdiet ultrices. Sed ultricie<br>s nisi nec diam.</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipis<br>icing elit Unde nihil iste eos quae quo ea accusantium.</p>
+				</article>
+				<article>
+					<ul>
+						<li>Our corporation</li>
+						<li><i class="far fa-building"></i>ipsumdolor</li>
+						<li><i class="far fa-file-code"></i>ipsumdolor</li>
+						<li><i class="far fa-edit"></i>ipsumdolor</li>
+					</ul>
+				</article>
+				<article>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
 				</article>
 				<article>
 					<div class="pic">
-						<p>Lorem ipsum dolor sit amet consectetur </p>
-						<i class="fas fas fa-laptop-code"></i>
+						<span>Color<br>pretty<br>strawberry</span>
+						<div class="icon"><a href="#" onclick="return false"><i class="fas fa-search"></i></a></div>
 					</div>
+					<p>Lorem ipsum dolor sit amet confer</p>
 				</article>
-
-
 			</div>
 		</div>
 	</section>
