메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 						<li><i class="far fa-edit"></i>ipsumdolor</li>
 					</ul>
 				</article>
-				<article>
+				<article class="button">
 					<ul>
 						<li></li>
 						<li></li>
