메인 하단 부분 수정중

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 				</article>
 				<article class="button">
 					<ul>
-						<li></li>
+						<li><a href="img/"></a></li>
 						<li></li>
 						<li></li>
 					</ul>
@@ -425,7 +425,7 @@
 		<li><a href="#brand"></a></li>
 		<li><a href="#banner"></a></li>
 		<li><a href="#podcasts"></a></li>
-		<li><a href="#comment"></a></li>
+		<li><a href="#content"></a></li>
 	</ul>
 
 </body>
