메인페이지 작업중

--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
 
 
 	<figure id="visual">
+		<video src="img/video01.mp4" muted loop autoplay></video>
 		<div class="txt">
-			<h1>Lorem, ipsum.</h1>
-			<p>Although I tend to favor a natural look,<br> I also like to have fun with make up.</p>
+			<h1>A Phone With Appeal</h1>
+			<p>WE WILL BE OPEN WITHOUT APPOINTMENT<br> THUS WEDNESDAY 10/11 (11AM TO 6PM). SEE<br> YOU THERE!</p>
 			<!-- <a href="#" onclick="return false">Read more <img src="img/arrow1.png" alt="arrow"></a> -->
 		</div>
 		<div class="visual_box">
@@ -168,9 +169,9 @@
 
 	<aside id="popup">
 		<div class="pop_inner">
-			<h1>DODAL</h1>
+			<h1>ENJOY 10% OFF</h1>
 			<div class="pop_content">
-				메인 페이지 다시 작업중
+				Take 10% off your first purchase and be the first to know about our latest product developments and offers straight to your inbox
 			</div>
 			<div class="wrap">
 				<input type="checkbox" name="ck" id="ck">
@@ -232,7 +233,9 @@
 			<h1>Products</h1>
 			<div class="wrap">
 				<article class="box1">
-					<div class="pic"></div>
+					<div class="pic_wrap">
+						<div class="pic"></div>
+					</div>
 					<div class="txt_box">
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat dignissimos.
 						</p>
@@ -240,14 +243,18 @@
 					</div>
 				</article>
 				<article class="box2">
-					<div class="pic"></div>
+					<div class="pic_wrap">
+						<div class="pic"></div>
+					</div>
 					<div class="txt_box">
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat.</p>
 						<span>Lorem ipsum dolor sit amet.</span>
 					</div>
 				</article>
 				<article class="box3">
-					<div class="pic"></div>
+					<div class="pic_wrap">
+						<div class="pic"></div>
+					</div>
 					<div class="txt_box">
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi quod placeat.</p>
 						<span>Lorem ipsum dolor sit amet.</span>
