팝업디자인 작업

--- a/index.html
+++ b/index.html
@@ -174,11 +174,14 @@
 				Take 10% off your first purchase and be the first to know about our latest product developments and offers straight to your inbox
 			</div>
 			<div class="wrap">
+				<input type="text" name="email" id="email" placeholder="Enter your email here">
+				<button>SIGN UP</button>
 				<input type="checkbox" name="ck" id="ck">
-				<label for="ck">오늘 하루 그만보기</label>
+				<label for="ck">I agree to your Privacy Policy</label>
+				<a href="#" onclick="return false">Privacy Policy</a>
 			</div>
 
-			<a href="#" class="close">CLOSE</a>
+			<a href="#" class="close"><i class="fas fa-times"></i></a>
 		</div>
 	</aside>
 
