content 제이쿼리 작업중

--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
 			<h1>Content</h1>
 			
 			<div class="wrap">
-				<article>
+				<article class="box1">
 					<h2>Nullam vitae justo at mauris<br> sodales feugiat. Praesent<br> pellentesque ipsum eget tellus<br> imperdiet ultrices. Sed ultricie<br>s nisi nec diam.</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipis<br>icing elit Unde nihil iste eos quae quo ea accusantium.</p>
 				</article>
-				<article>
+				<article class="box2">
 					<ul>
 						<li>Our corporation</li>
 						<li><i class="far fa-building"></i>ipsumdolor</li>
@@ -350,14 +350,14 @@
 						<li><i class="far fa-edit"></i>ipsumdolor</li>
 					</ul>
 				</article>
-				<article class="button">
+				<article class="box3">
 					<ul>
-						<li><a href="img/"></a></li>
+						<li class="on"></li>
 						<li></li>
 						<li></li>
 					</ul>
 				</article>
-				<article>
+				<article class="box4">
 					<div class="pic">
 						<span>Color<br>pretty<br>strawberry</span>
 						<div class="icon"><a href="#" onclick="return false"><i class="fas fa-search"></i></a></div>
