--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script defer src="js/scroll.js"></script>
 
 </head>
+
 <body>
 
 	<header id="header" class="myScroll">
@@ -28,7 +29,19 @@
 						<a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a>
 						<div class="sub">
 							<div class="left">
-								<h2>sub</h2>
+								<div class="pic">
+									<img src="img/error01.jpg" alt="헤더 이미지">
+								</div>
+								<h2>Lorem, ipsum.</h2>
+								<h2>Lorem, ipsum.</h2>
+								<h2>Lorem, ipsum.</h2>
+							</div>
+							<div class="center">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
 							</div>
 							<div class="right">
 								<ul>
@@ -171,7 +184,8 @@
 		<div class="pop_inner">
 			<h1>ENJOY 10% OFF</h1>
 			<div class="pop_content">
-				Take 10% off your first purchase and be the first to know about our latest product developments and offers straight to your inbox
+				Take 10% off your first purchase and be the first to know about our latest product developments and
+				offers straight to your inbox
 			</div>
 			<div class="wrap">
 				<input type="text" name="email" id="email" placeholder="Enter your email here">
@@ -336,11 +350,13 @@
 	<section id="content" class="myScroll">
 		<div class="inner">
 			<h1>Content</h1>
-			
+
 			<div class="wrap">
 				<article class="box1">
-					<h2>Nullam vitae justo at mauris<br> sodales feugiat. Praesent<br> pellentesque ipsum eget tellus<br> imperdiet ultrices. Sed ultricie<br>s nisi nec diam.</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipis<br>icing elit Unde nihil iste eos quae quo ea accusantium.</p>
+					<h2>Nullam vitae justo at mauris<br> sodales feugiat. Praesent<br> pellentesque ipsum eget
+						tellus<br> imperdiet ultrices. Sed ultricie<br>s nisi nec diam.</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipis<br>icing elit Unde nihil iste eos quae quo ea
+						accusantium.</p>
 				</article>
 				<article class="box2">
 					<ul>
@@ -367,8 +383,6 @@
 			</div>
 		</div>
 	</section>
-
-
 
 	<footer id="footer">
 		<div class="inner">
@@ -428,6 +442,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="result"></div>
 
 	<ul id="navi">
 		<li><a href="#header" class="on"></a></li>
