메인페이지 계속 수정

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li>
 						<a href="index.html">BRAND <i class="fas fa-chevron-down"></i></a>
 						<div class="sub">
-							<div class="left">
+							<div class="line1">
 								<div class="pic">
 									<img src="img/error01.jpg" alt="헤더 이미지">
 								</div>
@@ -36,14 +36,21 @@
 								<h2>Lorem, ipsum.</h2>
 								<h2>Lorem, ipsum.</h2>
 							</div>
-							<div class="center">
+							<div class="line2">
 								<ul>
 									<li><a href="#" onclick="return false">Category one</a></li>
 									<li><a href="#" onclick="return false">Category two</a></li>
 									<li><a href="#" onclick="return false">Category three</a></li>
 								</ul>
 							</div>
-							<div class="right">
+							<div class="line3">
+								<ul>
+									<li><a href="#" onclick="return false">Category one</a></li>
+									<li><a href="#" onclick="return false">Category two</a></li>
+									<li><a href="#" onclick="return false">Category three</a></li>
+								</ul>
+							</div>
+							<div class="line4">
 								<ul>
 									<li><a href="#" onclick="return false">Category one</a></li>
 									<li><a href="#" onclick="return false">Category two</a></li>
