메인계속 수정중

--- a/community.html
+++ b/community.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>community</title>
 	<script defer src="js/custom.js"></script>
+	<script defer src="js/mouse.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
@@ -337,6 +338,7 @@
 			</div>
 		</div>
 	</footer>
+	<div class="result"></div>
 </body>
 
 </html>
