--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
 	<script defer src="js/isotope.pkgd.min.js"></script>
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/myflickr.js"></script>
+	<script defer src="js/mouse.js"></script>
 </head>
 
 <body>
@@ -248,6 +249,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="result"></div>
 </body>
 
 </html>
