--- a/youtube.html
+++ b/youtube.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/youtube.js"></script>
+	<script defer src="js/mouse.js"></script>
 </head>
 
 <body>
@@ -280,6 +281,7 @@
 			</div>
 		</div>
 	</footer>
+	<div class="result"></div>
 </body>
 
 </html>
