--- a/department.html
+++ b/department.html
@@ -10,6 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/department.js"></script>
+	<script defer src="js/mouse.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 
 <body>
@@ -395,6 +396,7 @@
 			</div>
 		</div>
 	</footer>
+	<div class="result"></div>
 </body>
 
 </html>
