--- a/join.html
+++ b/join.html
@@ -12,6 +12,7 @@
 	<script src="js/jquery.mCustomScrollbar.js"></script>
 	<!-- <script defer src="js/join.js"></script> -->
 	<script defer src="js/custom.js"></script>
+	<script defer src="js/mouse.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -313,6 +314,7 @@
 			</div>
 		</div>
 	</footer>
+	<div class="result"></div>
 </body>
 
 </html>
