--- a/location.html
+++ b/location.html
@@ -13,6 +13,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script defer src="js/map.js"></script>
+	<script defer src="js/mouse.js"></script>
 </head>
 
 <body>
@@ -273,6 +274,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="result"></div>
 </body>
 
 </html>
