--- a/sub_page.html
+++ b/sub_page.html
@@ -7,7 +7,6 @@
     <title>subpage layout</title>
     <script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-	<!-- <script defer src="js/custom.js"></script> -->
 </head>
 <body>
     <header id="header_sub">
@@ -207,6 +206,9 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="result"></div>
+
 
 </body>
 </html>
