--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						<a class="title" href="gallery.html">GALLERY</a>
 						<div class="sub">
 							<div class="line1">
-								<h2>Introduce the brand</h2>
+								<h2>Photo Gallery</h2>
 								<div class="pic">
 									<img src="img/br10.jpg" alt="헤더 이미지">
 								</div>
@@ -201,8 +201,9 @@
 					<li>
 						<a class="title" href="location.html">LOCATION</a>
 						<div class="sub">
+							
 							<div class="line1">
-								<h2>Introduce the brand</h2>
+								<h2>The location of the company</h2>
 								<div class="pic">
 									<img src="img/br11.jpg" alt="헤더 이미지">
 								</div>
