--- a/index.html
+++ b/index.html
@@ -201,9 +201,8 @@
 					<li>
 						<a class="title" href="location.html">LOCATION</a>
 						<div class="sub">
-							
 							<div class="line1">
-								<h2>The location of the company</h2>
+								<h2>Company Location</h2>
 								<div class="pic">
 									<img src="img/br11.jpg" alt="헤더 이미지">
 								</div>
