--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Our products</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
@@ -46,7 +46,7 @@
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Our products</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -54,7 +54,7 @@
 							</div>
 							<div class="line4">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Our products</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -74,18 +74,18 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
-									<li><a href="#" onclick="return false">Products one two</a></li>
-									<li><a href="#" onclick="return false">Products one two</a></li>
-									<li><a href="#" onclick="return false">Products one two</a></li>
+									<h2 class="btns"><a href="#" onclick="return false">Online maketing</a></h2>
+									<li><a href="#" onclick="return false">Staff member one</a></li>
+									<li><a href="#" onclick="return false">Staff member two</a></li>
+									<li><a href="#" onclick="return false">Staff member two</a></li>
 								</ul>
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
-									<li><a href="#" onclick="return false">Products one two</a></li>
-									<li><a href="#" onclick="return false">Products two thr</a></li>
-									<li><a href="#" onclick="return false">Products two thr</a></li>
+									<h2 class="btns"><a href="#" onclick="return false">Manager</a></h2>
+									<li><a href="#" onclick="return false">Staff member one</a></li>
+									<li><a href="#" onclick="return false">Staff member two</a></li>
+									<li><a href="#" onclick="return false">Staff member thr</a></li>
 								</ul>
 							</div>
 						</div>
@@ -102,7 +102,7 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">YouTube channel</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
@@ -110,7 +110,7 @@
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">YouTube channel</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -118,7 +118,7 @@
 							</div>
 							<div class="line4">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">YouTube channel</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -138,7 +138,7 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">bulletin board</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
@@ -146,7 +146,7 @@
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">bulletin board</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -154,7 +154,7 @@
 							</div>
 							<div class="line4">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">bulletin board</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -174,7 +174,7 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Gallery</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
@@ -182,20 +182,13 @@
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Gallery</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 								</ul>
 							</div>
-							<div class="line4">
-								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
-									<li><a href="#" onclick="return false">Products one two</a></li>
-									<li><a href="#" onclick="return false">Products two thr</a></li>
-									<li><a href="#" onclick="return false">Products two thr</a></li>
-								</ul>
-							</div>
+						
 						</div>
 					</li>
 					<li>
@@ -210,7 +203,7 @@
 							</div>
 							<div class="line2">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Seoul office</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products one two</a></li>
@@ -218,7 +211,7 @@
 							</div>
 							<div class="line3">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Busan office</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
@@ -226,7 +219,7 @@
 							</div>
 							<div class="line4">
 								<ul>
-									<h2 class="btns"><a href="#" onclick="return false">our products</a></h2>
+									<h2 class="btns"><a href="#" onclick="return false">Jeju office</a></h2>
 									<li><a href="#" onclick="return false">Products one two</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
 									<li><a href="#" onclick="return false">Products two thr</a></li>
