--- a/join.html
+++ b/join.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://kit.fontawesome.com/6e561f56c7.js" crossorigin="anonymous"></script>
 	<script src="js/jquery.mCustomScrollbar.js"></script>
-	<!-- <script defer src="js/join.js"></script> -->
+	<script defer src="js/myform.js"></script>
 	<script defer src="js/custom.js"></script>
 	<script defer src="js/mouse.js"></script>
 	<link rel="stylesheet" href="css/style.css">
@@ -384,15 +384,23 @@
 						<caption class="hidden">회원가입 추가 양식폼</caption>
 
 						<tr>
-							<th scope="row"><span>가입경로</span></th>
+							<th scope="row"><span>성별</span></th>
 							<td>
-								<input type="text" name="route" placeholder="가입경로를 입력해주세요">
+								<input type="radio" name="gender" id="female" value="female">
+								<label for="female">여자</label>
+
+								<input type="radio" name="gender" id="male" value="male">
+								<label for="male">남자</label>
 							</td>
 						</tr>
 						<tr>
-							<th scope="row"><span>가입추천</span></th>
+							<th scope="row"><span>생일</span></th>
 							<td>
-								<input type="text" name="route" placeholder="가입 추천인을 입력해주세요">
+								<select name="year" id="year" title="년도" class="custom_select"></select>
+
+								<select name="month" id="month" title="월" class="custom_select"></select>
+
+								<select name="day" id="day" title="일" class="custom_select"></select>
 							</td>
 						</tr>
 
@@ -407,14 +415,23 @@
 
 								<input type="radio" name="recomm" id="Friends" value="Friends">
 								<label for="Friends">친구추천</label>
+
+								<input type="radio" name="recomm" id="blog" value="blog">
+								<label for="blog">블로그</label>
+
+								<input type="radio" name="recomm" id="newspaper" value="newspaper">
+								<label for="newspaper">신문</label>
+
+								<input type="radio" name="recomm" id="kakao" value="kakao">
+								<label for="kakao">카카오</label>
 							</td>
 						</tr>
 
 
 
 						<tr>
-							<th colspan="2" scope="row"><span>이용약관</span>
-								<textarea class="box1" name="box" cols="30" rows="10">
+							<th colspan="2" scope="row" class="box"><span>(필수)이용약관</span>
+								<textarea name="box" cols="30" rows="10">
 'ㅇㅇㅇ' (이하 '회사'로 표기) 는 고객의 개인정보를 보호하기 위해 노력하고 있으며 통신비밀보호법, 정보통신망 이용촉진 등의 법률을 준수하고 있습니다. 회사는 개인정보취급방침을 통해 고객이 제공하는 개인정보의 용도와 개인정보보호 조치에 대해 알려드립니다.
 본 방침은 2018년 07월 01일부터 시행됩니다.
 1. 수집하는 개인정보의 항목 및 수집방법
