--- a/join.html
+++ b/join.html
@@ -430,7 +430,8 @@
 
 
 						<tr>
-							<th colspan="2" scope="row" class="box1"><span>(필수)이용약관</span>
+							<th colspan="2" scope="row" class="box1">
+								<input type="checkbox" name="box1_agree" id="box1_agree"><span>(필수)이용약관</span>
 								<textarea name="box" cols="30" rows="10">
 'ㅇㅇㅇ' (이하 '회사'로 표기) 는 고객의 개인정보를 보호하기 위해 노력하고 있으며 통신비밀보호법, 정보통신망 이용촉진 등의 법률을 준수하고 있습니다. 회사는 개인정보취급방침을 통해 고객이 제공하는 개인정보의 용도와 개인정보보호 조치에 대해 알려드립니다.
 본 방침은 2018년 07월 01일부터 시행됩니다.
@@ -492,7 +493,7 @@
 							</th>
 						</tr>
 						<tr>
-							<th colspan="2" scope="row" class="box2"><span>(필수)개인정보 수집 및 이용</span>
+							<th colspan="2" scope="row" class="box2"><input type="checkbox" name="box2_agree" id="box2_agree"><span>(필수)개인정보 수집 및 이용</span>
 								<textarea name="box" cols="30" rows="10">
 'ㅇㅇㅇ' (이하 '회사'로 표기) 는 고객의 개인정보를 보호하기 위해 노력하고 있으며 통신비밀보호법, 정보통신망 이용촉진 등의 법률을 준수하고 있습니다. 회사는 개인정보취급방침을 통해 고객이 제공하는 개인정보의 용도와 개인정보보호 조치에 대해 알려드립니다.
 본 방침은 2018년 07월 01일부터 시행됩니다.
