마우스 수정

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 		</div>
 	</footer>
 
-	<div class="result"></div>
+	<div class="cursor"></div>
 
 	<ul id="navi">
 		<li><a href="#header" class="on"></a></li>
