폼수정 / form vaildation작업

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="https://kit.fontawesome.com/18f037b822.js" crossorigin="anonymous"></script>
 
 	<script defer src="js/custom.js"></script>
+	<script defer src="js/content.js"></script>
 	<script defer src="js/popup.js"></script>
 	<script defer src="js/scroll.js"></script>
 	<script defer src="js/mouse.js"></script>
