메인 콘텐츠 수정

--- a/join.html
+++ b/join.html
@@ -33,6 +33,11 @@
 					type: "password",
 					name: ["pwd1", "pwd2"],
 					len: 5
+				},
+				{
+					type : "text",
+					name : "phone1",
+					len : 11
 				}
 			])
 		});
