department 세부 수정

--- a/department.html
+++ b/department.html
@@ -253,7 +253,9 @@
 	</header>
 
 	<section class="content department">
-		<div class="sub_visual"></div>
+		<div class="sub_visual">
+			<h1>Department</h1>
+		</div>
 		<div class="inner">
 			<!-- <h1>Corporate</h1> -->
 			<!-- <ul class="team_name">
@@ -268,7 +270,7 @@
 					<div class="txt">
 						<h2>Online marketing</h2>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptatum vero maiores
-							error asperiores! Nesciunt veniam iste recusandae. Ab, officia.</p>
+							error asperiores! Nesciunt veniam iste recusandae. Ab, officia.lorem is Lorem ipsum dolor sit, amet consectetur adipisicing elit</p>
 						<a href="#">Tel +82 7777 7777</a>
 						<a href="#">E-mail djd8320@naver.com</a>
 					</div>
@@ -301,7 +303,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -313,7 +315,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -325,7 +327,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -337,7 +339,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -349,7 +351,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -361,7 +363,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -373,7 +375,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -385,7 +387,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -397,7 +399,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -409,7 +411,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -421,7 +423,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
@@ -433,7 +435,7 @@
 					<article>
 						<div class="pic">
 							<div class="txt">
-								<p> click</p>
+								<p>profile</p>
 							</div>
 						</div>
 						<h3>Alena Schilller</h3>
