--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 		</div>
 	</footer>
 
-	<!-- <div class="cursor"></div> -->
+	<div class="cursor"></div>
 
 	<ul id="navi">
 		<li><a href="#header" class="on"></a></li>
